edit in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "cst3144-frontend-fixed",
+    "name": "cst3144-frontend",
     "version": "1.0.0",
     "private": true,
     "scripts": {
